--- a/lavis/configs/models/blip2/blip2_instruct_vicuna7b_lora.yaml
+++ b/lavis/configs/models/blip2/blip2_instruct_vicuna7b_lora.yaml
@@ -24,7 +24,7 @@ model:
   num_query_token: 32
 
   # path to Vicuna checkpoint
-  llm_model: "/eva_data0/denny/vicuna-7b-v1.3"
+  llm_model: "lmsys/vicuna-7b-v1.5"
 
   # generation configs
   prompt: "Is this photo real?"
