--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,161 @@
-contexttimer
-decord
-diffusers<=0.16.0
-einops>=0.4.1
+accelerate==1.10.1
+altair==5.5.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+asttokens==3.0.0
+attrs==25.4.0
+beautifulsoup4==4.14.2
+bleach==6.2.0
+blinker==1.9.0
+blis==1.3.0
+braceexpand==0.1.7
+cachetools==6.2.1
+catalogue==2.0.10
+certifi==2025.10.5
+cfgv==3.4.0
+charset-normalizer==3.4.4
+click==8.3.0
+cloudpathlib==0.23.0
+confection==0.1.5
+contexttimer==0.3.3
+cymem==2.0.11
+decorator==5.2.1
+decord==0.6.0
+diffusers==0.35.1
+distlib==0.4.0
+einops==0.8.1
+exceptiongroup==1.3.0
+executing==2.2.1
 fairscale==0.4.4
-ftfy
-iopath
-ipython
-omegaconf
+filelock==3.20.0
+fsspec==2025.9.0
+ftfy==6.3.1
+gdown==5.2.0
+gitdb==4.0.12
+GitPython==3.1.45
+hf-xet==1.1.10
+huggingface-hub==0.35.3
+identify==2.6.15
+idna==3.11
+imageio==2.37.0
+importlib_metadata==8.7.0
+iopath==0.1.10
+ipython==8.37.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kaggle==1.7.4.5
+langcodes==3.5.0
+language_data==1.3.0
+lazy_loader==0.4
+marisa-trie==1.3.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mpmath==1.3.0
+murmurhash==1.0.13
+narwhals==2.8.0
+networkx==3.4.2
+nodeenv==1.9.1
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+omegaconf==2.3.0
+opencv-python==4.12.0.88
 opencv-python-headless==4.5.5.64
-opendatasets
-packaging
-pandas
-plotly
-pre-commit
-pycocoevalcap
-pycocotools
-python-magic
-scikit-image
-sentencepiece
-spacy
-streamlit
+opendatasets==0.1.22
+packaging==25.0
+pandas==2.3.3
+parso==0.8.5
+peft==0.17.1
+pexpect==4.9.0
+pillow==11.3.0
+platformdirs==4.5.0
+plotly==6.3.1
+portalocker==3.2.0
+pre_commit==4.3.0
+preshed==3.0.10
+prompt_toolkit==3.0.52
+protobuf==6.32.1
+psutil==7.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==21.0.0
+pycocoevalcap==1.2
+pycocotools==2.0.10
+pydantic==2.12.2
+pydantic_core==2.41.4
+pydeck==0.9.1
+Pygments==2.19.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-magic==0.4.27
+python-slugify==8.0.4
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+regex==2025.9.18
+requests==2.32.5
+rich==14.2.0
+rpds-py==0.27.1
+safetensors==0.6.2
+scikit-image==0.25.2
+scikit-learn==1.7.2
+scipy==1.15.3
+sentencepiece==0.2.1
+shellingham==1.5.4
+six==1.17.0
+smart_open==7.3.1
+smmap==5.0.2
+soupsieve==2.8
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+stack-data==0.6.3
+streamlit==1.50.0
+sympy==1.14.0
+tenacity==9.1.2
+text-unidecode==1.3
+thinc==8.3.6
+threadpoolctl==3.6.0
+tifffile==2025.5.10
 timm==0.4.12
-torch>=1.10.0
-torchvision
-tqdm
-transformers>=4.28.0
-webdataset
-wheel
-gdown
+tokenizers==0.22.1
+toml==0.10.2
+torch==2.8.0
+torchvision==0.23.0
+tornado==6.5.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.57.1
+triton==3.4.0
+typer==0.19.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+virtualenv==20.35.3
+wasabi==1.1.3
+watchdog==6.0.0
+wcwidth==0.2.14
+weasel==0.4.1
+webdataset==1.0.2
+webencodings==0.5.1
+wrapt==1.17.3
+zipp==3.23.0
